# hypro-dev

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
hypro/: Ancillary.py  AtmCorr.py  AtmLUT.py  Boresight.py  Classification.py  Coregistration.py  CreateSCA.py  DEM.py  ENVI.py  Figure.py  GeoRectification.py  GeoReferencing.py  Geography.py  HyspexPro.py  IMUGPS.py  ImageMerging.py  Interpolate.py  Radiometry.py  SensorModel.py  SmileEffect.py  Solar.py  Spectra.py  VIS.py  WVC.py
hypro/spatial/: crs.py  footprint.py
hypro/spatial/geometry/: geometry.py  ops.py
