[metadata]
name = hypro
version = 1.0.0
author = Nanfeng Liu
author-email = nliu58@wisc.edu
description = Tools for processing raw hyperspectral data from pushbroom sensors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnSpec/hypro
project_urls =
    Bug Tracker = https://github.com/EnSpec/hypro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = hypro
packages = find:
python_requires = >=3.8

[options.packages.find]
where = hypro
